@@ -1,44 +1,0 @@
-# This file is a shell script that caches the results of configure
-# tests run on this system so they can be shared between configure
-# scripts and configure runs.  It is not useful on other systems.
-# If it contains results you don't want to keep, you may remove or edit it.
-#
-# By default, configure uses ./config.cache as the cache file,
-# creating it if it does not exist already.  You can give configure
-# the --cache-file=FILE option to use a different cache file; that is
-# what configure does when it calls configure scripts in
-# subdirectories, so they share the cache.
-# Giving --cache-file=/dev/null disables caching, for debugging configure.
-# config.status only pays attention to the cache file if you give it the
-# --recheck option to rerun configure.
-#
-ac_cv_c_const=${ac_cv_c_const=yes}
-ac_cv_cygwin=${ac_cv_cygwin=no}
-ac_cv_func_atexit=${ac_cv_func_atexit=yes}
-ac_cv_func_socket=${ac_cv_func_socket=yes}
-ac_cv_func_strdup=${ac_cv_func_strdup=yes}
-ac_cv_func_strftime=${ac_cv_func_strftime=yes}
-ac_cv_func_strstr=${ac_cv_func_strstr=yes}
-ac_cv_header_fcntl_h=${ac_cv_header_fcntl_h=yes}
-ac_cv_header_stdc=${ac_cv_header_stdc=yes}
-ac_cv_header_sys_time_h=${ac_cv_header_sys_time_h=yes}
-ac_cv_header_sys_wait_h=${ac_cv_header_sys_wait_h=yes}
-ac_cv_header_unistd_h=${ac_cv_header_unistd_h=yes}
-ac_cv_path_ESD_CONFIG=${ac_cv_path_ESD_CONFIG=/usr/bin/esd-config}
-ac_cv_path_GLIB_CONFIG=${ac_cv_path_GLIB_CONFIG=/usr/bin/glib-config}
-ac_cv_path_GTK_CONFIG=${ac_cv_path_GTK_CONFIG=/usr/bin/gtk-config}
-ac_cv_path_LD=${ac_cv_path_LD=/usr/i386-slackware-linux/bin/ld}
-ac_cv_path_NM=${ac_cv_path_NM='/usr/bin/nm -B'}
-ac_cv_path_install=${ac_cv_path_install='/usr/bin/ginstall -c'}
-ac_cv_prog_CC=${ac_cv_prog_CC=gcc}
-ac_cv_prog_CPP=${ac_cv_prog_CPP='gcc -E'}
-ac_cv_prog_LN_S=${ac_cv_prog_LN_S='ln -s'}
-ac_cv_prog_RANLIB=${ac_cv_prog_RANLIB=ranlib}
-ac_cv_prog_cc_cross=${ac_cv_prog_cc_cross=no}
-ac_cv_prog_cc_g=${ac_cv_prog_cc_g=yes}
-ac_cv_prog_cc_works=${ac_cv_prog_cc_works=yes}
-ac_cv_prog_gcc=${ac_cv_prog_gcc=yes}
-ac_cv_prog_gnu_ld=${ac_cv_prog_gnu_ld=yes}
-ac_cv_prog_make_make_set=${ac_cv_prog_make_make_set=yes}
-ac_cv_struct_tm=${ac_cv_struct_tm=time.h}
-ac_cv_type_signal=${ac_cv_type_signal=void}
